improve code quality and reduce complexity by introducing helper methods